# Stein-Thinning-Cpp

./: .gitignore  CMakeLists.txt  README.md
include/Stein-Thinning-Cpp/: kernel.h  kmat.tpp  stein.tpp  thinning.h  utils.h
src/: kernel.cpp  kernel.h  kmat.tpp  main.cpp  thinning.cpp  utils.cpp
src/kernel/: kernel.cpp  kernel.h  kmat.tpp  stein.cpp  stein.h  thinning.cpp  thinning.h  utils.cpp
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt  test.cpp
